--- a/index.html
+++ b/index.html
@@ -445,6 +445,24 @@
             </li>
           </ul>
         </div>
+        <div class="footer-forms">
+          <p class="footer-forms-p">Subscribe</p>
+          <form class="footer-forms-form">
+            <label class="footer-forms-label">
+              <input
+                type="email"
+                placeholder="E-mail"
+                class="footer-forms-input"
+              />
+            </label>
+            <button type="submit" class="footer-forms-button">
+              Subscribe
+              <svg class="icon-svg-forms" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
