--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
               <input
                 type="email"
                 placeholder="E-mail"
+                name="email"
                 class="footer-forms-input"
               />
             </label>
@@ -465,5 +466,16 @@
         </div>
       </div>
     </footer>
+    <div class="modal-window-container">
+      <div class="modal-window">
+        <button type="button" class="modal-window-button">
+          <svg class="icons-windows" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+      <p class="modal-p"></p>
+      <form></form>
+    </div>
   </body>
 </html>
