--- a/index.html
+++ b/index.html
@@ -473,9 +473,64 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="modal-p">Leave your contacts and we will call you back</p>
+        <form>
+          <div>
+            <label class="windows-label" for="user-name">Name</label>
+          </div>
+          <div class="input-container">
+            <input id="user-name" type="text" name="user-name" class="input" />
+            <svg class="icons-input" width="18" height="24">
+              <use href="./images/icons.svg#icon-person-black"></use>
+            </svg>
+          </div>
+          <div>
+            <label class="windows-label" for="user-name">Phone</label>
+          </div>
+          <div class="input-container">
+            <input id="user-name" type="text" name="user-name" class="input" />
+            <svg class="icons-input" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone-black"></use>
+            </svg>
+          </div>
+          <div>
+            <label class="windows-label" for="user-name">Email</label>
+          </div>
+          <div class="input-container">
+            <input id="user-name" type="text" name="user-name" class="input" />
+            <svg class="icons-input" width="18" height="24">
+              <use href="./images/icons.svg#icon-email-black"></use>
+            </svg>
+          </div>
+          <div>
+            <label class="windows-label" for="user-comment">Comment</label>
+            <textarea
+              class="windows-textarea"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="windows-five">
+            <input
+              class="input-five"
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
+              visually-hidden
+            />
+            <label for="user-privacy" class="windows-five-label"
+              >I accept the terms and conditions of the
+              <span class="windows-five-span">
+                <svg class="windows-five-svg" width="10" height="8">
+                  <use href=""></use>
+                </svg>
+              </span>
+            </label>
+          </div>
+        </form>
       </div>
-      <p class="modal-p"></p>
-      <form></form>
     </div>
   </body>
 </html>
