--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
         </div>
       </div>
     </footer>
+
     <div class="modal-window-container">
       <div class="modal-window">
         <button type="button" class="modal-window-button">
@@ -475,7 +476,7 @@
         </button>
         <p class="modal-p">Leave your contacts and we will call you back</p>
         <form>
-          <div>
+          <div class="form-container">
             <label class="windows-label" for="user-name">Name</label>
           </div>
           <div class="input-container">
@@ -484,7 +485,7 @@
               <use href="./images/icons.svg#icon-person-black"></use>
             </svg>
           </div>
-          <div>
+          <div class="form-container">
             <label class="windows-label" for="user-name">Phone</label>
           </div>
           <div class="input-container">
@@ -493,7 +494,7 @@
               <use href="./images/icons.svg#icon-phone-black"></use>
             </svg>
           </div>
-          <div>
+          <div class="form-container">
             <label class="windows-label" for="user-name">Email</label>
           </div>
           <div class="input-container">
@@ -502,7 +503,7 @@
               <use href="./images/icons.svg#icon-email-black"></use>
             </svg>
           </div>
-          <div>
+          <div class="form-container">
             <label class="windows-label" for="user-comment">Comment</label>
             <textarea
               class="windows-textarea"
