--- a/index.html
+++ b/index.html
@@ -466,7 +466,6 @@
         </div>
       </div>
     </footer>
-
     <div class="modal-window-container">
       <div class="modal-window">
         <button type="button" class="modal-window-button">
@@ -478,12 +477,17 @@
         <form>
           <div class="form-container">
             <label class="windows-label" for="user-name">Name</label>
-          </div>
-          <div class="input-container">
-            <input id="user-name" type="text" name="user-name" class="input" />
-            <svg class="icons-input" width="18" height="24">
-              <use href="./images/icons.svg#icon-person-black"></use>
-            </svg>
+            <div class="input-container">
+              <input
+                id="user-name"
+                type="text"
+                name="user-name"
+                class="input"
+              />
+              <svg class="icons-input" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-container">
             <label class="windows-label" for="user-name">Phone</label>
