--- a/index.html
+++ b/index.html
@@ -491,21 +491,31 @@
           </div>
           <div class="form-container">
             <label class="windows-label" for="user-name">Phone</label>
-          </div>
-          <div class="input-container">
-            <input id="user-name" type="text" name="user-name" class="input" />
-            <svg class="icons-input" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone-black"></use>
-            </svg>
+            <div class="input-container">
+              <input
+                id="user-name"
+                type="text"
+                name="user-name"
+                class="input"
+              />
+              <svg class="icons-input" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-container">
             <label class="windows-label" for="user-name">Email</label>
-          </div>
-          <div class="input-container">
-            <input id="user-name" type="text" name="user-name" class="input" />
-            <svg class="icons-input" width="18" height="24">
-              <use href="./images/icons.svg#icon-email-black"></use>
-            </svg>
+            <div class="input-container">
+              <input
+                id="user-name"
+                type="text"
+                name="user-name"
+                class="input"
+              />
+              <svg class="icons-input" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-container">
             <label class="windows-label" for="user-comment">Comment</label>
