--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-container">
+          <div class="form-container-comment">
             <label class="windows-label" for="user-comment">Comment</label>
             <textarea
               class="windows-textarea"
@@ -528,12 +528,11 @@
           </div>
           <div class="windows-five">
             <input
-              class="input-five"
+              class="input-five visually-hidden"
               type="checkbox"
               id="user-privacy"
               value="true"
               name="user-privacy"
-              visually-hidden
             />
             <label for="user-privacy" class="windows-five-label"
               >I accept the terms and conditions of the
