--- a/index.html
+++ b/index.html
@@ -490,12 +490,12 @@
             </div>
           </div>
           <div class="form-container">
-            <label class="windows-label" for="user-name">Phone</label>
+            <label class="windows-label" for="user-phone">Phone</label>
             <div class="input-container">
               <input
-                id="user-name"
+                id="user-phone"
                 type="text"
-                name="user-name"
+                name="user-phone"
                 class="input"
               />
               <svg class="icons-input" width="18" height="24">
@@ -504,12 +504,12 @@
             </div>
           </div>
           <div class="form-container">
-            <label class="windows-label" for="user-name">Email</label>
+            <label class="windows-label" for="user-email">Email</label>
             <div class="input-container">
               <input
-                id="user-name"
+                id="user-email"
                 type="text"
-                name="user-name"
+                name="user-email"
                 class="input"
               />
               <svg class="icons-input" width="18" height="24">
