--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 name="user-phone"
                 class="input"
               />
-              <svg class="icons-input-phone" width="18" height="24">
+              <svg class="icons-input" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
@@ -512,7 +512,7 @@
                 name="user-email"
                 class="input"
               />
-              <svg class="icons-input-email" width="18" height="24">
+              <svg class="icons-input" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
