--- a/index.html
+++ b/index.html
@@ -538,11 +538,13 @@
               >I accept the terms and conditions of the
               <span class="windows-five-span">
                 <svg class="windows-five-svg" width="10" height="8">
-                  <use href=""></use>
+                  <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
+              <a class="windows-five-a">Privacy Policy</a>
             </label>
           </div>
+          <button class="six-button"></button>
         </form>
       </div>
     </div>
