--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
               <a class="windows-five-a">Privacy Policy</a>
             </label>
           </div>
-          <button class="six-button"></button>
+          <button class="six-button">Send</button>
         </form>
       </div>
     </div>
