--- a/index.html
+++ b/index.html
@@ -534,13 +534,13 @@
               value="true"
               name="user-privacy"
             />
-            <label for="user-privacy" class="windows-five-label"
-              >I accept the terms and conditions of the
+            <label for="user-privacy" class="windows-five-label">
               <span class="windows-five-span">
                 <svg class="windows-five-svg" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
+              I accept the terms and conditions of the
               <a class="windows-five-a">Privacy Policy</a>
             </label>
           </div>
